header is done. form values are collected in JSON

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^5.2.0"
+    "formik": "^2.2.6",
+    "react-router-dom": "^5.2.0",
+    "yup": "^0.32.9"
   }
 }
