--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "formik": "^2.2.6",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "yup": "^0.32.9"
   }
